# viewer3d

./: .gitignore  Cargo.toml  index.html  rust-toolchain.toml
src/: lib.rs  main.rs
vite/: index.html  package-lock.json  package.json  vite.config.ts
vite/src/: index.ts
