[package]
name = "viewer3d"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# This should go in the Cargo.toml in the root directory
[profile.release]
strip = true

[features]
load-off-thread = []
webgl = []
default = ["load-off-thread"]

[dependencies]
anyhow = "1.0.98"
cfg-if = "1"
egui = { git = "https://github.com/emilk/egui.git" }
egui-wgpu = { git = "https://github.com/emilk/egui.git" }
pars3d = { git = "https://github.com/JulianKnodt/pars3d.git", version = "0.1.0" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
winit = "0.30.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.38", features = ["derive"] }
egui-winit = { git = "https://github.com/emilk/egui.git" }
tokio = { version = "1.45.0", features = ["sync", "macros", "rt", "rt-multi-thread"] }
wgpu = "25.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
egui-winit = { git = "https://github.com/emilk/egui.git", default-features = false, features = [] }
tokio = { version = "1.45.0", features = ["sync", "macros", "rt"] }
tracing-wasm = "0.2.1"
wgpu = { version = "25.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }
