[package]
name = "viewer3d"
version = "0.1.0"
edition = "2024"

# This should go in the Cargo.toml in the root directory
[profile.release]
strip = true

[dependencies]
anyhow = "1.0.98"
cfg-if = "1"
clap = { version = "4.5.38", features = ["derive"] }
egui = { git = "https://github.com/emilk/egui.git" }
egui-wgpu = { git = "https://github.com/emilk/egui.git" }
egui-winit = { git = "https://github.com/emilk/egui.git" }
pars3d = { git = "https://github.com/JulianKnodt/pars3d.git", version = "0.1.0" }
tokio = { version = "1.45.0", features = ["sync", "macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
winit = "0.30.10"
wgpu = "25.0.0"
